--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /project11/SimpleArrayList/nbproject/private/
 /project11/UAS/nbproject/private/
 /project11/UAS/build/
+/project11/ManajemenKaryawan/nbproject/private/
+/UAS_PBO/ManajemenKaryawan/build/
